Add GNOSIS Earth DGGS Agent for SRTM data retrieval
- Add gnosis_dggs_agent.py: OGC API client for GNOSIS Earth SRTM data
- Support multiple DGGS CRS: rHEALPix, H3, S2, ISEA3H, IGEO
- Integrate with COP STAC dialog: query button and data export
- Add comprehensive documentation: GNOSIS_DGGS_AGENT.md
- Add implementation summary: GNOSIS_IMPLEMENTATION.md
- Add test suite: test_gnosis_agent.py
- Update README with GNOSIS features
- Update pb_tool.cfg for deployment

--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -17,7 +17,7 @@ plugin_path: /Applications/QGIS-LTR.app/Contents/Resources/python
 
 [files]
 # Python  files that should be deployed with the plugin
-python_files: cop_stac_exporter.py __init__.py copexporter_dialog.py stac_cop_exporter.py cop_stac_dialog.py copexporter.py
+python_files: cop_stac_exporter.py __init__.py copexporter_dialog.py stac_cop_exporter.py cop_stac_dialog.py copexporter.py gnosis_dggs_agent.py
 
 # The main dialog file that is loaded (not compiled)
 main_dialog: copexporter_dialog_base.ui
@@ -29,7 +29,7 @@ compiled_ui_files:
 resource_files: resources.qrc
 
 # Other files required for the plugin
-extras: icon.png metadata.txt
+extras: icon.png metadata.txt README.md GNOSIS_DGGS_AGENT.md
 
 # Other directories to be deployed with the plugin.
 # These must be subdirectories under the plugin directory
